--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -22,10 +22,10 @@ p {
   font-size: 18px !important;
 }
 
-label {
-  font-weight: 300 !important;
-  letter-spacing: 3px;
-}
+// label {
+//   font-weight: 300 !important;
+//   letter-spacing: 3px;
+// }
 
 section {
   margin: 60px 0px;
