--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="footer-content">
         <div class="container">
             <div class="row">                    
-                <div class="footer-col links col-md-2 col-sm-4 col-xs-12">
+                <div class="footer-col links col-sm-3 col-xs-12">
                     <div class="footer-col-inner">
                         <h3 class="title">About us</h3>
                         <ul class="list-unstyled">
@@ -13,7 +13,7 @@
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->    
-                <div class="footer-col links col-md-2 col-sm-4 col-xs-12">
+                <div class="footer-col links col-sm-3 col-xs-12">
                     <div class="footer-col-inner">
                         <h3 class="title">Curriculum</h3>
                         <ul class="list-unstyled">
@@ -23,7 +23,7 @@
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->              
-                <div class="footer-col links col-md-2 col-sm-4 col-xs-12 sm-break">
+                <div class="footer-col links col-sm-3 col-xs-12 sm-break">
                     <div class="footer-col-inner">
                         <h3 class="title">Support</h3>
                         <ul class="list-unstyled">
@@ -34,40 +34,7 @@
                         </ul>
                     </div><!--//footer-col-inner-->            
                 </div><!--//foooter-col-->   
-                <!-- <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
-                    <div class="footer-col-inner">
-                        <ul class="social list-inline">
-                            <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>        
-                            <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li>             
-                        </ul>
-                        <div class="form-container">
-                            <p class="intro">Stay up to date with the latest news and offers from Techrise</p>
-                            <form class="signup-form navbar-form">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Enter your email address">
-                                </div>   
-                                <button type="submit" class="btn btn-cta btn-cta-primary">Subscribe Now</button>                                 
-                            </form>                               
-                        </div>
-                    </div>
-                </div> -->
-                <div class="clearfix"></div> 
-            </div><!--//row-->
-            <div class="row has-divider">
-                <div class="footer-col download col-md-6 col-sm-12 col-xs-12">
-                    <!-- <div class="footer-col-inner">
-                        <h3 class="title">Mobile apps</h3>
-                        <ul class="list-unstyled download-list">
-                            <li><a class="btn btn-ghost" href="#"><i class="fa fa-apple"></i><span class="text">Download for iOS</span> </a></li>
-                            <li><a class="btn btn-ghost" href="#"><i class="fa fa-android"></i><span class="text">Download for Android</span></a></li>
-                            <li><a class="btn btn-ghost" href="#"><i class="fa fa-windows"></i><span class="text">Windows coming soon...</span></a></li>
-                        </ul>
-                    </div> --><!--//footer-col-inner-->
-                </div><!--//download-->
-                <div class="footer-col contact col-md-6 col-sm-12 col-xs-12">
+                <div class="footer-col connect col-sm-3 col-xs-12">
                     <div class="footer-col-inner">
                         <h3 class="title">Contact us</h3>                          
                         <p class="adr clearfix">
@@ -79,67 +46,35 @@
                             </span>
                         </p>
                         <p class="tel"><i class="fa fa-phone"></i>+81 806 174 7394</p>
-                        <p class="email"><i class="fa fa-envelope-o"></i><a href="#">contact@techrise.me</a></p> 
-                        
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
-                    </div><!--//footer-col-inner-->
-                </div><!--//contact-->
-            </div>
+                        <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> natsuko@techrise.me</a></p> 
+                        <ul class="social list-inline">
+                            <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
+                            <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
+                            <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->        
+                            <!-- <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li> -->             
+                        </ul>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                        </script>
+<!--                         <div class="form-container">
+                            <p class="intro">Stay up to date with the latest news and offers from Techrise</p>
+                            <form class="signup-form navbar-form">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Enter your email address">
+                                </div>   
+                                <button type="submit" class="btn btn-cta btn-cta-primary">Subscribe Now</button>                                 
+                            </form>                               
+                        </div> -->
+                    </div>
+                </div>
+                <div class="clearfix"></div> 
+            </div><!--//row-->
         </div><!--//container-->
     </div><!--//footer-content-->
     <div class="bottom-bar">
         <div class="container">
-            <small class="copyright">Copyright @ 2016 Techrise</small>                
+            <small class="copyright">Copyright @ 2016 TECHRISE</small>                
         </div><!--//container-->
     </div><!--//bottom-bar-->
 </footer><!--//footer-->
 
-<!-- 
-<footer>
-    <div class="footer-above">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col col-md-4">
-                    <h3>Have any Questions?</h3>
-                    <p>Feel free to contact us at techrisecoding@gmail.com!</p>
-                </div>
-                <div class="footer-col col-md-4">
-                    <h3>Around the Web</h3>
-                    <p>
-                        Coming Soon!
-                    </p>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- <div class="footer-col col-md-4">
-                    <h3>About Techrise</h3>
-                    <p>Techrise teaches awesome people how to build awesome ideas</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="footer-below">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    Copyright &copy; Techrise 2016
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
