--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -72,7 +72,7 @@
     <div class="container">
        <h2 class="title">Ready to start coding with Techrise?</h2>
          <p class="intro">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, <span class="counting">completely free of charge</span>.</p>
-         <p><a class="btn btn-cta btn-cta-primary" href="/" target="_blank">Sign Up Now</a></p>
+         <p><a class="btn btn-cta btn-cta-primary" href="/preregistration" target="_blank">Sign Up Now</a></p>
     </div><!--//container-->
 </section><!--//cta-section-->
 
