--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,18 @@
 <div class = "row">
   <div class = "col-xs-10 col-xs-offset-1">
-    <h2>Sign up</h2>
+    <h2 class="title text-center">Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="field">
         <%= f.label :name %><br />
-        <%= f.text_field :name, autofocus: true, required: true, class: 'form-control' %>
+        <%= f.text_field :name, autofocus: true, required: true, class: 'form-control', placeholder: 'Your name' %>
       </div>
 
       <div class="field">
         <%= f.label :email %><br />
-        <%= f.email_field :email, required: true, class: 'form-control' %>
+        <%= f.email_field :email, required: true, class: 'form-control', placeholder: 'Your email' %>
       </div>
 
       <div class="field">
@@ -20,17 +20,17 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control' %>
+        <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control', placeholder: 'Your password' %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
       </div>
       
       <br>
       <div class="actions">
-        <%= f.submit "Sign up", class: 'btn btn-primary' %>
+        <%= f.submit "Sign up", class: 'btn btn-block btn-cta-primary' %>
       </div>
     <% end %>
 
