--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -169,7 +169,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><a class="btn btn-cta btn-cta-primary" href="signup.html">Sign Up to Enroll for Free</a></div>
+        <div class="text-center"><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up to Enroll for Free</a></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
