--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,13 @@
+#slider {
+  padding: 20px;
+  box-shadow: 5px 0 15px -6px #585858 inset;
+}
+
+
+.lesson_content {
+  background-color: white;
+}
+
 .item .content p {
   margin: 0 0 10px;
 }
