--- a/app/views/instapost_lessons/lessons/lesson_21.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_21.html.erb
@@ -12,7 +12,7 @@
   <h3>Hints</h3>
 
   <p>
-    Think about the database columns that we added in the previous lessons. Think about why we added those in. You should be able to figure out what kind of relationships you need to set up :) If you need help, refer back to <%= link_to 'this lesson', 'http://localhost:3000/instapost_lessons/14' %> for some guidance.
+    Think about the database columns that we added in the previous lessons. Think about why we added those in. You should be able to figure out what kind of relationships you need to set up :) If you need help, refer back to <%= link_to 'this lesson', '/instapost_lessons/14' %> for some guidance.
   </p>  
 </div>
 
