landing page edits

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -234,7 +234,7 @@
                             TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. These 3 months have been challenging but worth it.
                           </p>
                           </blockquote>
-                          <p class="source">Aadesh Shrestha<br /><span class="title">Software Engineer, äLuxuRē</span></p>
+                          <p class="source">Aadesh Shrestha<br /><span class="title">Hired as Software Engineer at äLuxuRē after graduation</span></p>
                       </div><!--//content-->                         
                   </div><!--//item-->  
 
