--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -231,7 +231,7 @@
                           <blockquote>
                           <i class="fa fa-quote-left"></i>
                           <p>
-                            TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. These 3 months have been challenging but worth it.
+                            <strong>TECHRISE has been by far the best learning experience for me.</strong> My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. <strong>These 3 months have been challenging but worth it.</strong>
                           </p>
                           </blockquote>
                           <p class="source">Aadesh Shrestha<br /><span class="title">Hired as Software Engineer at äLuxuRē after graduation</span></p>
@@ -244,7 +244,7 @@
                           <blockquote>
                           <i class="fa fa-quote-left"></i>
                           <p>
-                            I was lost and was trying many courses on the internet. After joining Techrise, I got courses of my preference and suitable to the current market. Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here. Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build  skills to make great apps.
+                            <strong>I was lost and was trying many courses on the internet.</strong> After joining Techrise, I got courses of my preference and suitable to the current market. <strong>Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here.</strong> Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build skills to make great apps.
                           </p>
                           </blockquote>
                           <p class="source">Lakshman Basnet<br /><span class="title">Computer & Information Sciences Student at Tribhuvan University</span></p>
@@ -268,7 +268,7 @@
                 <blockquote>
                 <i class="fa fa-quote-left" style="float: left; margin-right: 5px;"></i>
                 <p style="text-align: justify;">
-                  Its my great pleasure to know that TECHRISE is launching a special skill development IT program specially for Nepali youth. Definitely it will help to develop the skill manpower and provide a great employment opportunity abroad. Since the education system of Nepal is being a theoretical base, even after graduation in concern faculty, could not fit for the international labour markets. As per present scenario, more than 6,000,000 Nepalese unskilled workers are working abroad as a labourer. If we could able to train them as skilled manpower, it will definitely help Nepal's national economy. I, therefore wish all the success of TECHRISE and would like to extend my sincere thanks to co-founders of TECHRISE.
+                  Its my great pleasure to know that TECHRISE is launching a special skill development IT program specially for Nepali youth. <strong>It will definitely help to develop skilled manpower and provide a great employment opportunity abroad.</strong> Since the education system of Nepal is being a theoretical base, even after graduation in concern faculty, could not fit for the international labour markets. As per present scenario, <strong>more than 6,000,000 Nepalese unskilled workers are working abroad as a labourer</strong>. If we could able to train them as skilled manpower, <strong>it will definitely help Nepal's national economy</strong>. I, therefore wish all the success of TECHRISE and would like to extend my sincere thanks to co-founders of TECHRISE.
                 </p>
 
                 </blockquote>
@@ -286,7 +286,7 @@
                 <blockquote>
                 <i class="fa fa-quote-left" style="float: left; margin-right: 5px;"></i>
                 <p style="text-align: justify;">
-                  TECHRISE is more than a coding camp - it's a vehicle for empowering the youth of Nepal with the knowledge and tools they need to unlock their true economic and personal potential. Because the TECHRISE model requires former students to also become teachers, the organization is creating a network effect for sustainable and long-term transformative change. One student at a time, TECHRISE is not only changing lives at an individual level, but is also building a highly skilled workforce that has the potential to grow Nepal's economic stability as a whole.
+                  TECHRISE is more than a coding camp - it's <strong>a vehicle</strong> for empowering the youth of Nepal with the knowledge and tools they need to <strong>unlock their true economic and personal potential.</strong> Because the TECHRISE model provides former students to also become teachers, the organization is creating a <strong>network effect for sustainable and long-term transformative change</strong>. One student at a time, <strong>TECHRISE is not only changing lives at an individual level, but is also building a highly skilled workforce that has the potential to grow Nepal's economic stability as a whole.</strong>
                 </p>
 
                 </blockquote>
