--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -91,9 +91,15 @@ http://localhost:3000/
   You should see a nice welcome page from Ruby on Rails.
 </p>
 
-<p>
-  If you don’t see this, make sure you navigated to your project folder.
-</p>
+<div class="well">
+  <p>
+    If you don’t see a welcome page or get an error, make sure you've navigated to your project folder. You can do this by running this command:
+  </p>
+
+<pre><code class="bash">
+cd ~/desktop/instapost
+</code></pre>
+</div>
 
 <p>
   Awesome! We're all set!
