--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,8 @@
+<%= back_to_lesson %>
+
 <h3>Guidelines</h3>
 <ul class = "unindented_ul">
+
 	<li>Google your question first</li>
 	<p>
 		Becoming a great googler and getting your own answers is an essential skill to become a competent developer. Google is smarter than anyone, ask it first, and if you still don't understand, seek for assistance.</p>
@@ -22,9 +25,11 @@
 <%= simple_form_for :comment, url: forum_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
 	<%= f.input :title, required: true %>
 	<div data-no-turbolink>
-		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true %>
 	</div>
-	<%= f.input :lesson, :as => :hidden, :input_html => { :value => params[:lesson]} %>
-	<%= f.input :forum_id, :as => :hidden, :input_html => { :value => params[:forum_id]} %>
+	<%= f.input :lesson, as: :hidden, input_html: { value: params[:lesson]} %>
+	<%= f.input :forum_id, as: :hidden, input_html: { value: params[:forum_id]} %>
+
+	<br>
 	<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
 <% end %>
