--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,9 +1,7 @@
 <div class="col-md-offset-1 col-md-10 col-xs-12">
 
-		<!--
-		<%= link_to 'Back to lesson', session[:back_to_lesson] %>
-		-->
-
+		<%= back_to_lesson %>
+		
 		<h3><%= @comment.title %></h3>
 		<%= sanitize raw(@comment.description) %>
 		<p class = "pull-right" >by <%= comment_owner(@comment) %></p>
@@ -21,9 +19,9 @@
 
 		<%= simple_form_for :reply, url: forum_comment_replies_path(params[:forum_id], params[:id]), method: :post, input_html: {class: 'form-horizontal'} do |f|  %>
 			<div data-no-turbolink>
-				<%= f.cktext_area :content, label: 'Comment', required: true %>
+				<%= f.cktext_area :content, label: 'Comment', ckeditor: {language: 'us'}, required: true %>
 			</div>
-			<%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id } %>
+			<%= f.input :user_id, as: :hidden, input_html:{ value: current_user.id } %>
 
 			<br>
 			<%= f.submit 'Submit', class: 'btn btn-primary' %>
