--- a/app/views/submission_comments/new.html.erb
+++ b/app/views/submission_comments/new.html.erb
@@ -1,3 +1,5 @@
+<%= back_to_lesson %>
+
 <h3>Submit your work</h3>
 <p>
   Awesome work! Follow the directions on the lesson and submit your work. We'll get back to you soon and give you feedback or code review.
@@ -10,9 +12,9 @@
 <%= simple_form_for :submission_comment, url: submission_submission_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
 	<%= f.input :title, required: true %>
 	<div data-no-turbolink>
-		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, ckeditor: {language: 'us'}, required: true %>
 	</div>
-	<%= f.input :lesson, :as => :hidden, :input_html => { :value => params[:lesson]} %>
-	<%= f.input :submission_id, :as => :hidden, :input_html => { :value => params[:submission_id]} %>
+	<%= f.input :lesson, as: :hidden, :input_html => { :value => params[:lesson]} %>
+	<%= f.input :submission_id, as: :hidden, :input_html => { :value => params[:submission_id]} %>
 	<%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
